@@ -573,6 +573,64 @@ class MintServer(object):
             httpProxies = self.cfg.proxy or {}
         return [ useInternalConaryProxy, httpProxies ]
 
+    def _createGroupTemplate(self, project, version='1.0', buildLabel=None, groupName=None):
+        currentRlsVersion = 1
+        currentRapaTag = 'rpath:raa-2'
+        if self.cfg.rBuilderOnline:
+            groupApplianceLabel = 'conary.rpath.com@rpl:%d' % currentRlsVersion
+            rapaLabel = 'raa.rpath.org@%s' % currentRapaTag
+        else:
+            groupApplianceLabel = 'rap.rpath.com@rpath:linux-%d' % currentRlsVersion
+            rapaLabel = 'products.rpath.com@%s' % currentRapaTag
+        if groupName is None:
+            groupName = 'group-%s-appliance' % project.getHostname()
+        if buildLabel is None:
+            buildLabel = "%s@%s" % (project.getFQDN(), self.cfg.defaultBranch)
+        #Create the new trove
+        cfg = self._setupCheckin(project, buildLabel)
+
+        repos = conaryclient.ConaryClient(cfg).getRepos()
+        label = versions.Label(buildLabel)
+        trvLeaves = repos.getTroveLeavesByLabel(\
+                {groupName: {label: None} }).get(groupName, [])
+        if not trvLeaves:
+            pid = os.fork()
+            if not pid:
+                try:
+                    origdir = os.getcwd()
+                    path = tempfile.mkdtemp(dir = os.path.join(
+                        self.cfg.dataPath, 'tmp'))
+                    try:
+                        os.chdir(path)
+                        checkin.newTrove(repos, cfg, groupName, path)
+                        recipePath = os.path.join(path, groupName + '.recipe')
+                        f = open(recipePath, 'w')
+                        from mint.templates import groupTemplate
+                        recipe = templates.write(groupTemplate,
+                            cfg = self.cfg, groupApplianceLabel=groupApplianceLabel,
+                            projectName=project.getHostname(), groupName=groupName,
+                            rapaLabel=rapaLabel, version=version)
+                        f.write(recipe)
+                        f.write('\n') #Force a blank line at the end for cvc add's sake
+                        f.close()
+                        checkin.addFiles([groupName + '.recipe'])
+                        use.setBuildFlagsFromFlavor(groupName, cfg.buildFlavor)
+                        checkin.commit(repos, cfg, 'Autogenerated appliance group recipe')
+                    finally:
+                        os.chdir(origdir)
+                        util.rmtree(path, ignore_errors=True)
+                except Exception, e:
+                    import traceback
+                    print >>sys.stderr, traceback.format_exc(sys.exc_info()[2])
+                    os._exit(1)
+                else:
+                    os._exit(0)
+            pid, status = os.waitpid(pid, 0)
+            return bool(status)
+        else:
+            #XXX: raise an exception
+            return False
+
     def checkVersion(self):
         if self.clientVer < SERVER_VERSIONS[0]:
             raise InvalidClientVersion(
@@ -642,6 +700,9 @@ class MintServer(object):
         self.projects.createRepos(self.cfg.reposPath, self.cfg.reposContentsDir,
                                   hostname, domainname, self.authToken[0],
                                   self.authToken[1])
+
+        if applianceValue:
+            self._createGroupTemplate(project)
 
         if self.cfg.hideNewProjects:
             repos = self._getProjectRepo(project)
@@ -1969,19 +2030,24 @@ If you would not like to be %s %s of this project, you may resign from this proj
         xml = buildxml.xmlFromData(simplejson.loads(buildJson))
         return self.commitBuildXml(projectId, labelStr, xml)
 
+    def _setupCheckin(self, project, buildLabel):
+        cfg = project.getConaryConfig()
+        cfg.configLine("buildLabel %s" % buildLabel)
+        cfg.configLine('name %s' % self.auth.username)
+        cfg.configLine('contact http://www.rpath.org/')
+        cfg.configLine('quiet True')
+        cfg.initializeFlavors()
+
+        return cfg
+
     @typeCheck(int, ((str, unicode),), ((str, unicode),))
     @requiresAuth
     def commitBuildXml(self, projectId, labelStr, buildXml):
         self._filterProjectAccess(projectId)
         project = projects.Project(self, projectId)
         label = versions.Label(labelStr)
-
-        cfg = project.getConaryConfig()
-        cfg.configLine("buildLabel %s" % labelStr)
-        cfg.configLine('name %s' % self.auth.username)
-        cfg.configLine('contact http://www.rpath.org/')
-        cfg.configLine('quiet True')
-        cfg.initializeFlavors()
+        
+        cfg = self._setupCheckin(project, labelStr)
 
         repos = conaryclient.ConaryClient(cfg).getRepos()
         recipeName = 'build-definition'
