@@ -876,6 +876,38 @@ class ProjectTestConaryRepository(MintRepositoryHelper):
         assert(ConaryClient(cfg).getRepos().troveNamesOnServer("quux-project." \
                 + MINT_PROJECT_DOMAIN) == [])
 
+    def testNoCreateGroupTemplate(self):
+        client, userid = self.quickMintUser("test", "testpass")
+
+        #First, create a project without being an appliance
+        projId = client.newProject('Not an appliance', 'nap', MINT_PROJECT_DOMAIN, appliance="no")
+        project = client.getProject(projId)
+        cfg = project.getConaryConfig()
+        #This one should be empty
+        self.assertEquals(ConaryClient(cfg).getRepos().troveNamesOnServer(
+            'nap.' + MINT_PROJECT_DOMAIN), [])
+
+    def testCreateGroupTemplate(self):
+        client, userid = self.quickMintUser("test", "testpass")
+
+        #First, create a project without being an appliance
+        projId = client.newProject('Not an appliance', 'nap', MINT_PROJECT_DOMAIN, appliance="no")
+        projId = client.newProject('An appliance', 'app', MINT_PROJECT_DOMAIN, appliance="yes")
+        project = client.getProject(projId)
+        cfg = project.getConaryConfig()
+        #This one should be empty
+        trvLeaves = ConaryClient(cfg).getRepos().getAllTroveLeaves(
+                'app.' + MINT_PROJECT_DOMAIN, {})
+        self.assertEquals(trvLeaves.keys(), ['group-app-appliance:source'])
+        labels = trvLeaves['group-app-appliance:source']
+        self.assertEquals(len(labels), 1)
+        self.assertEquals(str(labels.keys()[0].branch()), '/app.rpath.local2@rpl:devel')
+        self.assertEquals(str(labels.keys()[0].trailingRevision()), '1.0-1')
+
+
+        # TODO: Add additional tests to exercise the label selecting, and
+        # optional groupnames, label, etc.
+
 
 if __name__ == "__main__":
     testsuite.main()
