@@ -11,6 +11,8 @@ Web Front End Changes
   mechanism to get appliances built quickly. (RBL-2514)
 * The Conary repository permission management web user interface has
   been modified to use the term "Role" instead of "Group". (RBL-2580)
+* New appliance projects will be prepopulated with a sample group recipe ready
+  for extending. (RBL-2515)
 
 Internal Changes
 ----------------
